--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=vlog
 
-spring.datasource.username=minhduc8a2
-spring.datasource.password=123456
-spring.datasource.url=jdbc:h2:mem:ducledb
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
